// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button row 1`] = `
<div
  className="pe-button-row"
>
  <Button
    key="one"
    label="One"
  />
  <Button
    key="two"
    label="Two"
  />
  <Button
    key="three"
    label="Three"
  />
</div>
`;

exports[`Dark tone class + light tone 1`] = `
<div
  className="pe-button-row"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <Button
    label="Normal"
    tone="light"
  />
  <Button
    disabled={true}
    label="Disabled"
    tone="light"
  />
  <Button
    className="tests-button-themed-button"
    label="Theme"
    tone="light"
  />
</div>
`;

exports[`Dark tone class + light tone class 1`] = `
<div
  className="pe-button-row pe-light-tone"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <Button
    label="Normal"
  />
  <Button
    disabled={true}
    label="Disabled"
  />
  <Button
    className="tests-button-themed-button"
    label="Theme"
  />
</div>
`;

exports[`HOC (JSX) 1`] = `
<SecondaryButton
  label="Secondary Button"
/>
`;

exports[`No options 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: after 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <span>
    After
  </span>
</a>
`;

exports[`Option: before 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <span>
    Before
  </span>
</a>
`;

exports[`Option: children 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <span>
      Child
    </span>
  </div>
</a>
`;

exports[`Option: class 1`] = `
<a
  className="pe-button pe-text-button        class-x"
  onKeyUp={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: className 1`] = `
<a
  className="pe-button pe-text-button        className-x"
  onKeyUp={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: content 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <span>
      Content
    </span>
  </div>
</a>
`;

exports[`Option: element 1`] = `
<button
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: formaction 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Form action
    </div>
  </div>
</a>
`;

exports[`Option: id 1`] = `
<a
  className="pe-button pe-text-button        "
  id="id-x"
  onKeyUp={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: inactivate (2) 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Inactivated for 2s
    </div>
  </div>
</a>
`;

exports[`Option: inactivate (2s) (JSX) 1`] = `
<Button
  inactivate={2}
  label="Inactivated for 2s"
/>
`;

exports[`Option: inactive (false) 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Not inactive
    </div>
  </div>
</a>
`;

exports[`Option: inactive (true) 1`] = `
<a
  className="pe-button pe-text-button   pe-button--inactive     "
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Inactive
    </div>
  </div>
</a>
`;

exports[`Option: ink (false) 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      No ink
    </div>
  </div>
</a>
`;

exports[`Option: label -- dark tone class 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Label
    </div>
  </div>
</a>
`;

exports[`Option: label 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Label
    </div>
  </div>
</a>
`;

exports[`Option: ripple 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Custom ripple
    </div>
  </div>
</a>
`;

exports[`Option: router url (with hash) 1`] = `
<Button
  label="Go to #/shadow"
  url={
    Object {
      "href": "#/shadow",
    }
  }
/>
`;

exports[`Option: selected 1`] = `
<a
  className="pe-button pe-text-button pe-button--selected       "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Selected
    </div>
  </div>
</a>
`;

exports[`Option: style (colors) 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
    style={
      Object {
        "backgroundColor": "#EF6C00",
        "color": "#fff",
      }
    }
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Styled
    </div>
  </div>
</a>
`;

exports[`Option: tabindex 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={3}
/>
`;

exports[`Option: tone "dark" -- dark tone class 1`] = `
<a
  className="pe-button pe-text-button      pe-dark-tone  "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Label
    </div>
  </div>
</a>
`;

exports[`Option: wash (false) 1`] = `
<a
  className="pe-button pe-text-button        "
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      No wash
    </div>
  </div>
</a>
`;

exports[`Themed Button (colors) 1`] = `
<a
  className="pe-button pe-text-button        tests-button-themed-button"
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Themed Button
    </div>
  </div>
</a>
`;

exports[`Themed Button (hover) 1`] = `
<a
  className="pe-button pe-text-button        tests-button-hover-button"
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Hover Button
    </div>
  </div>
</a>
`;

exports[`Themed Button -- dark tone class 1`] = `
<a
  className="pe-button pe-text-button        tests-button-themed-button"
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Themed Button
    </div>
  </div>
</a>
`;

exports[`Themed Button blue on dark -- dark tone class 1`] = `
<a
  className="pe-button pe-text-button        blue-on-dark-Button"
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Blue on dark Button
    </div>
  </div>
</a>
`;

exports[`Themed Button: (option: border) (JSX) 1`] = `
<Button
  border={true}
  className="react-secondary-button"
  label="Button"
/>
`;

exports[`Themed Button: (option: border) -- dark tone class 1`] = `
<a
  className="pe-button pe-text-button    pe-button--border    tests-button-bordered-button"
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Border dark tone
    </div>
  </div>
</a>
`;

exports[`Themed Button: (option: border) 1`] = `
<a
  className="pe-button pe-text-button    pe-button--border    tests-button-bordered-button"
  onKeyUp={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
  >
    <div
      className="pe-button__wash"
      key="wash"
    />
    <div
      className="pe-button__focus"
      key="focus"
    />
    <div
      className="pe-button__label"
    >
      Border
    </div>
  </div>
</a>
`;

exports[`With React Router Link 1`] = `
<Button
  element={[Function]}
  label="Go to /shadow"
  url={
    Object {
      "to": "/shadow",
    }
  }
/>
`;
